# ot-harjoitustyo

./: .coveragerc  README.md  pyproject.toml
docs/: vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md
poetry-testi/: pyproject.toml
src/: sqema.sql  users.py
src/templates/: index.html  layout.html  login.html  register.html
