[project]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = [
    {name = "saraayy",email = "sara.abdullahiy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cowsay (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
