[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "saraayy",email = "sara.abdullahiy@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)"
]
